More support for unsigned arithmetic.
git-svn-id: svn://sourceware.org/svn/kawa/trunk@8491 5e0a886f-7f45-49c5-bc19-40643649e37f